--- a/style.css
+++ b/style.css
@@ -6,15 +6,39 @@
 }
 
 body{
-    background-color: #ddd;
+    background-color: #f9f9f9;
+    font-family: 'Roboto', sans-serif;
 }
 
-header, section{
-    padding: 5rem;
+header{    
+    padding: 1rem;
+    background-color: white;
+    border-bottom: 2px solid #f2f2f2;
+
+    display: grid;
+    grid-template-columns: auto auto;
+    justify-content: space-between;
+    align-items: center;
 }
 
-header{
-    background-color: #2196f3;
+.logo img{
+    width: 100px;
+}
+
+.search input [type='search']{
+    width: 400px;
+    padding: 0.5rem;
+    border-radius: 2px;
+    border: 1px solid #ccc;
+}
+
+.button{
+    padding: 0.25rem 1.5rem;
+    border: 1px solid #2c5fd5;
+    border-radius: 2px;
+    color: #2c5fd5;
+    font-weight: bold;
+    text-decoration: none;
 }
 
 main{
@@ -34,8 +58,23 @@ main{
 }
 
 .video-player{
-    background-color: #ffeb3b;
     grid-area: video-player;
+
+    position: relative;
+    padding: 1rem 0 56.26% 1rem;
+    height: 0;
+    overflow: hidden;
+    text-align: center;
+}
+
+.video-player iframe,
+.video-player object,
+.video-player embed{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
 .video-info{
@@ -69,13 +108,17 @@ main{
 }
 
 @media screen and (max-width: 700px) {
-    .ad{
+    .search, .ad{
         display: none;
     }
     
 }
 
 @media screen and (min-width: 700px) {
+    header{
+        grid-template-columns: auto auto auto;
+    }
+
     main{
         max-width: 1200px;
 
@@ -86,3 +129,4 @@ main{
         'channel        subscribe      up-next';
     }
 }
+
