--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ a{
     width: 100px;
 }
 
-.search input [type='search']{
+.pesquisar input{
     width: 400px;
     padding: 0.5rem;
     border-radius: 2px;
@@ -52,6 +52,7 @@ a{
     color: white;
     padding: 10px 16px;
     text-transform: uppercase;
+    font-size: 0.8rem;
 }
 
 main{
@@ -210,7 +211,7 @@ main{
 }
 
 @media screen and (max-width: 700px) {
-    .search, .ad{
+    .pesquisar, .ad{
         display: none;
     }
     
@@ -228,7 +229,12 @@ main{
         'video-player   video-player  ad'
         'video-player   video-player  up-next'
         'video-info     actions       up-next'
-        'channel        subscribe      up-next';
+        'channel        subscribe     up-next'
+        '.              .             up-next';
+    }
+
+    .video-info{
+        border-bottom: 1px solid #ddd;
     }
 }
 
